Closed Bug 1686458 Opened 5 years ago Closed 5 years ago

bullets for list items shifted, distorted, cut off or missing

Categories

(Core :: Layout: Generated Content, Lists, and Counters, defect)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- unaffected
firefox86 --- fixed

People

(Reporter: aryx, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files)

Attached image screenshot of isssue

Firefox 86.0a1 20210113100240 on Windows 8.1

The issue reproduces in one Nightly profile but not in another. Ctrl+F5 to force the reloading of the resources doesn't fix it.

Bullets for list items e.g. at https://wiki.mozilla.org/Main_Page and https://wiki.mozilla.org/Sheriffing/How_To/Getting_started_as_a_sheriff are either missing or cut off/distorted (look more like rectangles).

Bisection confirms it as regression from bug 1685078.

Flags: needinfo?(emilio)

Huh, I don't see this happening on Linux... Do you have WebRender enabled or disabled? Could you attach about:support?

Flags: needinfo?(aryx.bugmail)

Yes, webrender is not enabled and I don't know why (all preferences containing webrender have the same value like the profile where webrender is shown as enabled and for which about:support will get attached in a few moments

Flags: needinfo?(aryx.bugmail)

Is layers.acceleration.disabled different in these?

Anyhow I can repro with WR disabled and zoom. Will take a look.

WebRender seems to ignore aAnchor completely. Maybe we can remove it,
but will do that in a separate bug.

I'll try to come up with a reftest, though it seems to be dependent on
DPI which makes it a bit trickier.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)

(To add a test when I find some more time)

Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7eaed23432d7 Fix anchor point in bullet image painting. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Flags: needinfo?(emilio)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: