Bug 1686458 - Fix anchor point in bullet image painting. r=jrmuizel

WebRender seems to ignore aAnchor completely. Maybe we can remove it,
but will do that in a separate bug.

I'll try to come up with a reftest, though it seems to be dependent on
DPI which makes it a bit trickier.

Differential Revision: https://phabricator.services.mozilla.com/D101765